--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-marshmallow
-scipy
 anyio==3.2.0
+apispec==4.6.0
 appnope==0.1.2
 argon2-cffi==20.1.0
 async-generator==1.10
@@ -20,6 +19,7 @@ defusedxml==0.7.1
 distributed==2021.6.2
 entrypoints==0.3
 Flask==2.0.1
+flask-apispec==0.11.0
 Flask-SQLAlchemy==2.5.1
 fsspec==2021.6.1
 greenlet==1.1.0
@@ -46,6 +46,7 @@ jupyterlab-server==2.6.0
 jupyterlab-widgets==1.0.0
 locket==0.2.1
 MarkupSafe==2.0.1
+marshmallow==3.12.1
 matplotlib-inline==0.1.2
 mistune==0.8.4
 msgpack==1.0.2
@@ -80,6 +81,7 @@ pyzmq==22.1.0
 qtconsole==5.1.0
 QtPy==1.9.0
 requests==2.25.1
+scipy==1.7.0
 Send2Trash==1.7.1
 six==1.16.0
 sniffio==1.2.0
@@ -95,6 +97,7 @@ traitlets==5.0.5
 typing-extensions==3.10.0.0
 urllib3==1.26.5
 wcwidth==0.2.5
+webargs==8.0.0
 webencodings==0.5.1
 websocket-client==1.1.0
 Werkzeug==2.0.1
